Implement polymorphism in Usuario